--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
       run: docker build . --file Dockerfile --tag mpierce80/unifi-6.55.5:$(date +%s)
 
     - name: Docker Push
-      run: docker push ${{secrets.DOCKER_USER}/mpierce80/unifi-6.55.5
+      run: docker push ${{secrets.DOCKER_USER}}/mpierce80/unifi-6.55.5
