--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,12 +14,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    
-    - name: Log in to Docker Hub
-      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-      with:
-        username: ${{ secrets.DOCKER_USER }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
+    - name: docker login
+      env:
+        DOCKER_USER:  ${{secrets.DOCKER_USER}}
+        DOCKER_PASSWORD:  ${{secrets.DOCKER_PASSWORD}}
+      run:  |
+        docker login -u mpierce80 -p dckr_pat_l4_z1bfuZPsRutp1k2fTRZo_L5o
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag mpierce80/unifi-6.55.5:$(date +%s)
 
