--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -24,4 +24,4 @@ jobs:
       run: docker build . --file Dockerfile --tag mpierce80/unifi:$(date +%s)
 
     - name: Docker Push
-      run: docker push mpierce80/unifi
+      run: docker push mpierce80/unifi:$(date +%s)
