--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -19,7 +19,7 @@ jobs:
         DOCKER_USER:  ${{secrets.DOCKER_USER}}
         DOCKER_PASSWORD:  ${{secrets.DOCKER_PASSWORD}}
       run:  |
-        docker login -u DOCKER_USER -p dckr_pat_l4_z1bfuZPsRutp1k2fTRZo_L5o
+        docker login -u $DOCKER_USER -p dckr_pat_l4_z1bfuZPsRutp1k2fTRZo_L5o
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag mpierce80/unifi:6.5.55
 
