--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       env:
         DOCKER_USER:  ${{secrets.DOCKER_PASSWORD}}
       run:  |
-        docker login -u "$DOCKER_USER" -p dckr_pat_l4_z1bfuZPsRutp1k2fTRZo_L5o
+        docker login -u "$DOCKER_USER1" -p dckr_pat_l4_z1bfuZPsRutp1k2fTRZo_L5o
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag mpierce80/unifi:6.5.55
 
