--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,9 +16,8 @@ jobs:
     - uses: actions/checkout@v3
     - name: docker login
       env:
-        DOCKER_USER:  ${{secrets.DOCKER_PASSWORD}}
+        DOCKER_USER:  ${{secrets.DOCKER_USER}}
       run:  |
-        echo "$DOCKER_USER" | sed 's/./& /g' 
         docker login -u "$DOCKER_USER" -p dckr_pat_l4_z1bfuZPsRutp1k2fTRZo_L5o
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag mpierce80/unifi:6.5.55
